[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/d_monigote_strip13.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Proyectil.gd" type="Script" id=2]
[ext_resource path="res://Sounds/s_golpemuro.wav" type="AudioStream" id=3]
[ext_resource path="res://Sounds/s_flecha.wav" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 4.0

[node name="Proyectil" type="Area2D" groups=["proyectiles", "sombreados"]]
collision_layer = 0
monitorable = false
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Coli" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Bala" type="Sprite" parent="."]
position = Vector2( 5.96046e-08, -63 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 1 )
hframes = 13
frame = 8
__meta__ = {
"_edit_lock_": true
}

[node name="Final" type="Timer" parent="."]
wait_time = 2.5
one_shot = true
autostart = true

[node name="AudTiro" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true

[node name="AudMuro" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="area_entered" from="." to="." method="_on_Proyectil_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Proyectil_area_exited"]
[connection signal="timeout" from="Final" to="." method="_on_Final_timeout"]
